# nsga-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: check-and-lint.yaml  publish.yaml  python.yaml  rust.yaml
examples/: adaptive_nsga3_inverted_dtlz1.rs  convergence.rs  convergence_plot.py  nsga2_sch.rs  nsga2_sch_plot.py  nsga2_zdt1.rs  nsga3_dtlz1.rs  nsga3_dtlz1_8obj.rs  nsga3_dtlz1_8obj_plot.py  nsga3_dtlz1_plot.py  nsga3_dtlz2.rs  nsga3_inverted_dtlz1.rs  nsga3_inverted_dtlz1_plot.py  reference_points_1layer.rs  reference_points_1layer_plot.py  reference_points_2layers.rs  reference_points_2layers_plot.py
examples/results/: DTLZ1_3obj_Adaptive_NSGA3_gen400.json  DTLZ1_3obj_NSGA3_gen400.json  DTLZ1_8obj_NSGA3_gen750.json  DTLZ2_3obj_NSGA3_gen400.json  SCH_2obj_NSGA2_gen250.json  ZDT1_2obj_NSGA2_gen1000.json
examples/results/convergence/: Final_NSGA2_gen1000.json  History_NSGA2_gen100.json  History_NSGA2_gen200.json  History_NSGA2_gen300.json  History_NSGA2_gen400.json  History_NSGA2_gen500.json  History_NSGA2_gen600.json  History_NSGA2_gen700.json  History_NSGA2_gen800.json  History_NSGA2_gen900.json  Init_NSGA2_gen1.json
libs/hv-fonseca-et-al-2006-sys/: Cargo.toml
libs/nsga-rs-macros/: Cargo.toml
libs/nsga-rs-macros/src/: lib.rs
libs/optirustic-macros/: Cargo.toml
nsga-rs-py/: Cargo.toml  README.md  optirustic.pyi  pyproject.toml
nsga-rs-py/src/: lib.rs
nsga-rs-py/tests/: test_api.py
nsga-rs-py/utils/: plot.py
optirustic-py/: Cargo.toml  README.md  optirustic.pyi  pyproject.toml
optirustic-py/src/: lib.rs
optirustic-py/tests/: test_api.py
src/algorithms/: a_nsga3.rs  algorithm.rs  mod.rs  nsga2.rs  stopping_condition.rs
src/algorithms/nsga2/: crowding.rs  mod.rs  nsga2.rs  survival.rs
src/algorithms/nsga3/: adaptive_ref_points.rs  mod.rs  niching.rs
src/core/: constraint.rs  data.rs  error.rs  individual.rs  mod.rs  objective.rs  problem.rs  variable.rs
src/metrics/: hypervolume.rs  hypervolume_2d.rs  hypervolume_fonseca_2006.rs
src/metrics/hv_wfg/: mod.rs
src/operators/: comparison.rs  crossover.rs  mutation.rs  selector.rs
src/utils/: algebra.rs  fast_non_dominated_sort.rs  mod.rs  reference_points.rs
